--- a/index.css
+++ b/index.css
@@ -43,17 +43,16 @@ hr {
     max-height: 450px;
     margin: auto; 
     display: block;
-    } 
+} 
 .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
-    }
-      
+}
 .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
 }
 #footerbnr {   
     color: black; 
-    background: url(images/bg_footer2.png);
+    background: url(images/bg_footer.png);
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Roboto', sans-serif; 
@@ -66,7 +65,7 @@ hr {
 }
 .goog-te-banner-frame.skiptranslate {
     display: none !important;
-    } 
+} 
 body {
     top: 0px !important; 
-    }
+}
