--- a/index.css
+++ b/index.css
@@ -9,14 +9,7 @@
     color: black;
     font-size: medium;
 }
-#jmbotxt{
-    font-family: 'Cambo', serif;
-    color:black;
-    font-size: medium;
-    background: rgb(251,255,206);
-    background: linear-gradient(53deg, rgba(251,255,206,1) 0%, rgba(205,183,255,1) 100%);
-}
-#jmbotxtaboutme{
+.jmbotxt{
     font-family: 'Cambo', serif;
     color:black;
     font-size: medium;
@@ -44,11 +37,26 @@ hr {
     margin: auto; 
     display: block;
 } 
+/*Replace the main carousel icons with image/svg*/
 .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
 }
 .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
+
+/*Force the carousel icons black color*/
+.carousel-indicators li{
+    background-color: black !important;
+}
+/*Remove the Google translate popup*/
+.goog-te-banner-frame.skiptranslate {
+    display: none !important;
+} 
+/*Used to force 0 margin, padding on jumbotron
+not sure still needed*/
+body {
+    top: 0px !important; 
 }
 #footerbnr {   
     color: black; 
@@ -58,21 +66,16 @@ hr {
     font-family: 'Cambo', serif; 
     border: 5px solid black;
 }
-.carousel-indicators li{
-    background-color: black !important;
-    
-    
-}
-.goog-te-banner-frame.skiptranslate {
-    display: none !important;
-} 
-body {
-    top: 0px !important; 
-}
 #vernazza{
         display: block;
         margin-left: auto;
         margin-right: auto;
         width: auto;
 }
-    
+/*Remove accordion card/card-header border*/
+.card-header {
+    border-bottom: none !important;
+}
+.card {
+    border: none !important;
+}
